TFS 288343, 288341, 288340, 288339, 286654 TFS 288343: [BUG] [SecretsBroker][UI] The checkboxes in the plugin accounts lists seem to be too close to the asset name TFS 288341: [BUG] [SecretsBroker][UI] Both the Vault Accounts and Managed Accounts lists should be sorted by Asset TFS 288340: [BUG] [SecretsBroker][UI] Add a default button to the Certificate Signing Request definiation dialog TFS 288339: [BUG] [SecretsBroker][UI] Add a refresh button to both the Select Vault Account and Select Account panels TFS 286654: [BUG] [SecretsBroker][UI] Trusted Certificates dialog should not allow the user to click the Verify TLS Certificate checkbox until trusted certificates have been added

--- a/SafeguardDevOpsService/ClientApp/src/app/select-accounts/select-accounts.component.scss
+++ b/SafeguardDevOpsService/ClientApp/src/app/select-accounts/select-accounts.component.scss
@@ -21,6 +21,25 @@ table {
   width: 600px;
   flex: 1;
   overflow: auto;
+
+  .table-container {
+    position: relative;
+    min-height: 200px;
+    display: flex;
+    flex-direction: column;
+
+    .mat-table {
+      flex: 1;
+    }
+
+    & th {
+    padding-left: 24px; 
+    }
+    
+    & td {
+    padding-left: 24px; 
+    }
+  }
 }
 
 .spinner-container {
@@ -64,13 +83,3 @@ table {
   background-color: $iris-pastel;
 }
 
-.table-container {
-  position: relative;
-  min-height: 200px;
-  display: flex;
-  flex-direction: column;
-
-  .mat-table {
-    flex: 1;
-  }
-}
